Changed border to outline to fix overlapping

--- a/client/src/components/passwords/Passwords.scss
+++ b/client/src/components/passwords/Passwords.scss
@@ -1,5 +1,5 @@
 .Passwords {
-  border: 1px solid var(--secondary-accent);
+  outline: 1px solid var(--secondary-accent);
   border-radius: 12px;
   width: 850px;
   display: flex;
